Remove redundant npm dependency

--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "webpack-stream": "^5.0.0"
   },
   "dependencies": {
-    "gulp-run-command": "^0.0.9",
-    "npm": "^6.2.0"
+    "gulp-run-command": "^0.0.9"
   }
 }
